--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,7 @@ p.news-item-preview{
     height:40px; 
     overflow:hidden;
     text-align: justify;
+    font-size: 12px;
 }
 
 /* Multiselect
@@ -375,5 +376,7 @@ width:435px;
  }
  .tabletr{
     vertical-align: top;
+    padding-left: 35px;
+    padding-top: 15px;
  }
  
