--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,12 @@
 root { 
     display: block;
 }
+html{
+font-family: century gothic;
+
+}
 boby{
-    font-family: "segoe";
+    font-family: century gothic;
     margin: 0;
     width: 100%; 
     height: 100%;
@@ -377,5 +381,5 @@ width:435px;
  .tabletr{
     vertical-align: top;
     padding-left: 35px;
-    padding-top: 15px;
+    
  }
