--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -52,7 +52,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "segoe";;
+  font-family: century gothic;
 }
 [class^="icon-"] {
   background: none\9;
@@ -695,7 +695,7 @@ h6 {
   left: 10px;
   display: inline-block;
   margin-right: 3em;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 600;
   color: #555;
   line-height: 18px;
@@ -918,12 +918,12 @@ h6 {
   bottom: -2px;
   left: 3px;
   right: 3px;
-  background-color: #ffffff;
+  /*background-color: #ffffff;
   -webkit-border-radius: 0 0 3px 3px;
   -moz-border-radius: 0 0 3px 3px;
   border-radius: 0 0 3px 3px;
   border: 1px solid #d3d3d3;
-  border-top: 0;
+  border-top: 0;*/
 }
 .stacked:before {
   bottom: -4px;
