--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,10 @@ li:hover{
 .err{
     
 }
+h3{
+    text-decoration: underline;
+    margin-left: 40px;
+}
 p.news-item-preview{
     height:40px; 
     overflow:hidden;
@@ -355,9 +359,9 @@ input[type=checkbox] {
  }
  .imgnews{
     position: absolute;
-    right: 2px;
-    top: -25px;
- }
+    left: 9px;
+    top: 4px; 
+}
  #error_news{
 	position: absolute;
 	top: 443px;
